added images to the html file

--- a/index.html
+++ b/index.html
@@ -7,6 +7,10 @@
     <title>HTML Images</title>
   </head>
   <body>
-    <!-- Your code here -->
+    <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSfNnI1vpolGqahYVginbMBR7hfLyMLYYkGsIRUOoqMkw&s"/>
+    <img src="https://cdns-images.dzcdn.net/images/cover/19e761f5efadd86098265258cb4e3615/264x264.jpg" alt="Steve Lacy"/>
+    <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQkovT3NLeFCrhRxLnfCKqvrcpFGsAPWhZY_DVuECKd-Q&s"
+    alt="Gemini Rights album cover"
+    title="Best Album yet"/>
   </body>
 </html>
